--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.flutter_app" "\0"
-            VALUE "FileDescription", "flutter_app" "\0"
+            VALUE "CompanyName", "com.facebook" "\0"
+            VALUE "FileDescription", "facebook" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "flutter_app" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.flutter_app. All rights reserved." "\0"
-            VALUE "OriginalFilename", "flutter_app.exe" "\0"
-            VALUE "ProductName", "flutter_app" "\0"
+            VALUE "InternalName", "facebook" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 com.facebook. All rights reserved." "\0"
+            VALUE "OriginalFilename", "facebook.exe" "\0"
+            VALUE "ProductName", "facebook" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
